Improving our display a bit - ensure equal-height thumbnails so our floating DIVs don't wrap strangely, and a bit of padding when there's more than one row of images

--- a/style.css
+++ b/style.css
@@ -12,4 +12,5 @@ BODY {
     font-style: italic;
     font-size: smaller;
     padding-right: 1em;
+    padding-bottom: 1em;
 }
